feat(calculadoras-salud): agregar 5 nuevas calculadoras de salud y fitness con soporte i18n
  Implementadas 5 nuevas calculadoras de salud con soporte completo de
  internacionalización en los 7 idiomas (es, en, pt, fr, hi, de, it):

  - Calculadora de Calorías: cálculo de TMB con ecuación Mifflin-St Jeor,
    niveles de actividad y objetivos de pérdida/ganancia de peso
  - Calculadora de Grasa Corporal: métodos US Navy y basado en IMC con
    análisis de composición corporal
  - Calculadora de TMB: tres fórmulas (Mifflin-St Jeor, Harris-Benedict,
    Katch-McArdle) con multiplicadores de actividad
  - Calculadora de Peso Ideal: cuatro fórmulas científicas (Robinson, Miller,
    Devine, Hamwi) más rango basado en IMC
  - Calculadora de GECT: gasto energético total diario con recomendaciones
    de macros

  Cada calculadora incluye:
  - Archivos de traducción completos para los 7 idiomas
  - Lógica de cálculo con tipos seguros y soporte métrico/imperial
  - Componentes Astro responsivos con patrones de diseño consistentes
  - Páginas optimizadas para SEO con etiquetas hreflang apropiadas
  - Listados de calculadoras actualizados en todas las páginas índice

  Total: 35 nuevas páginas de calculadoras (5 calculadoras × 7 idiomas)

--- a/public/locales/de/common.json
+++ b/public/locales/de/common.json
@@ -17,7 +17,8 @@
     "female": "Weiblich",
     "height": "Größe",
     "weight": "Gewicht",
-    "years": "Jahre"
+    "years": "Jahre",
+    "week": "Woche"
   },
   "units": {
     "metric": "Metrisch",
