--- a/public/locales/hi/common.json
+++ b/public/locales/hi/common.json
@@ -17,7 +17,8 @@
     "female": "महिला",
     "height": "ऊंचाई",
     "weight": "वजन",
-    "years": "वर्ष"
+    "years": "वर्ष",
+    "week": "सप्ताह"
   },
   "units": {
     "metric": "मीट्रिक",
