feat: agregar buscador y 10 nuevas calculadoras en todas las páginas de inicio
  - Implementar funcionalidad de búsqueda en tiempo real en las 7 páginas de inicio
  - Agregar traducciones de búsqueda (search y noResults) en los 7 idiomas
  - Agregar 10 nuevas calculadoras a todas las páginas de inicio:
    * Calculadora de Proteínas
    * Calculadora de Tipo de Cuerpo
    * Calculadora de Calorías Quemadas
    * Calculadora de Área de Superficie Corporal (BSA)
    * Calculadora de Tipo de Sangre
    * Calculadora de Ovulación
    * Calculadora de Período
    * Calculadora de Tamaño de Estructura Corporal
    * Calculadora de Frecuencia Cardíaca
    * Calculadora de Relación Cintura-Cadera
  - Remover enlace "Calculadoras" del navbar en BaseLayout
  - Total de calculadoras por idioma: 26 (16 existentes + 10 nuevas)
  - Filtrado por título y descripción con mensaje de "sin resultados"

--- a/public/locales/de/common.json
+++ b/public/locales/de/common.json
@@ -18,7 +18,9 @@
     "height": "Größe",
     "weight": "Gewicht",
     "years": "Jahre",
-    "week": "Woche"
+    "week": "Woche",
+    "search": "Rechner suchen...",
+    "noResults": "Keine Rechner gefunden, die Ihrer Suche entsprechen"
   },
   "units": {
     "metric": "Metrisch",
