--- a/public/locales/hi/common.json
+++ b/public/locales/hi/common.json
@@ -18,7 +18,9 @@
     "height": "ऊंचाई",
     "weight": "वजन",
     "years": "वर्ष",
-    "week": "सप्ताह"
+    "week": "सप्ताह",
+    "search": "कैलकुलेटर खोजें...",
+    "noResults": "आपकी खोज से मेल खाने वाला कोई कैलकुलेटर नहीं मिला"
   },
   "units": {
     "metric": "मीट्रिक",
